--- a/feature/movie_details/src/main/res/layout/layout_collection_dialog.xml
+++ b/feature/movie_details/src/main/res/layout/layout_collection_dialog.xml
@@ -7,6 +7,7 @@
         android:id="@+id/parts_of_collection"
         android:layout_width="match_parent"
         android:padding="@dimen/base_margin"
+        tools:listitem="@layout/list_item_media_small"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:orientation="horizontal"
