fix: Resolved issue with title in the toolbar when the selected movie changes.

--- a/feature/movie_details/src/main/res/layout/fragment_media_details.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details.xml
@@ -27,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
                 android:textSize="18sp"
+                app:title="@{media.title}"
                 app:collapsedTitleTextColor="?attr/colorOnPrimary"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginStart="@dimen/base_margin"
