--- a/feature/movie_details/src/main/res/layout/fragment_collection_parts.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_collection_parts.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/collection_name"
-            style="@style/HugeTitleTextViewStyle"
+            style="@style/SmallTitleTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/base_margin"
@@ -47,11 +47,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/collection_parts"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="@dimen/base_margin"
             android:clipToPadding="false"
             android:paddingStart="@dimen/base_margin"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/collection_overview"
