--- a/core/ui/src/main/res/layout/list_item_media_small.xml
+++ b/core/ui/src/main/res/layout/list_item_media_small.xml
@@ -13,8 +13,9 @@
         android:id="@+id/poster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="@dimen/base_margin"
+        android:layout_marginBottom="@dimen/base_margin"
+        android:layout_marginTop="@dimen/base_margin"
         app:pv_chipValue="@{media.voteAverageRounded}"
         app:pv_imageUrl="@{media.completePosterPathW780}"
         app:pv_posterHeight="170dp"
