--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,10 +4,9 @@
         android:id="@id/home_graph"
         android:icon="@drawable/ic_baseline_house_siding_24"
         android:title="Home" />
- <!--   <item
-        android:id="@+id/discoverFragment"
+    <item
+        android:id="@id/discover_graph"
         android:icon="@drawable/ic_discover"
         android:title="Discover" />
-   -->
 
 </menu>
