--- a/feature/media_discover/src/main/res/layout/bottom_sheet_filter.xml
+++ b/feature/media_discover/src/main/res/layout/bottom_sheet_filter.xml
@@ -44,23 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:selectionRequired="true"
-            app:singleSelection="true">
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipPopularitySort"
-                style="@style/CustomFilterChipStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="Popularity" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipVoteAverageSort"
-                style="@style/CustomFilterChipStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Vote Average" />
-        </com.google.android.material.chip.ChipGroup>
+            app:singleSelection="true"/>
 
     </HorizontalScrollView>
 
