--- a/feature/media_discover/src/main/res/navigation/discover_graph.xml
+++ b/feature/media_discover/src/main/res/navigation/discover_graph.xml
@@ -12,20 +12,20 @@
         android:label="DiscoverFragment" >
         <action
             android:id="@+id/action_discoverFragment_to_customFilterFragment"
-            app:destination="@id/customFilterFragment" />
+            app:destination="@id/filterableContainerFragment" />
     </fragment>
     <fragment
-        android:id="@+id/customFilterFragment"
+        android:id="@+id/filterableContainerFragment"
         tools:layout="@layout/fragment_custom_filter"
-        android:name="com.indisparte.media_discover.custom_filters.CustomFilterFragment"
+        android:name="com.indisparte.media_discover.custom_filters.FilterableContainerFragment"
         android:label="CustomFilterFragment" >
         <action
             android:id="@+id/action_customFilterFragment_to_bottomSheetFilter"
-            app:destination="@id/bottomSheetFilter" />
+            app:destination="@id/filterBottomSheet" />
     </fragment>
     <dialog
-        android:id="@+id/bottomSheetFilter"
+        android:id="@+id/filterBottomSheet"
         tools:layout="@layout/bottom_sheet_filter"
-        android:name="com.indisparte.media_discover.bottom_sheet.BottomSheetFilter"
+        android:name="com.indisparte.media_discover.bottom_sheet.FilterBottomSheet"
         android:label="Filter" />
 </navigation>
