--- a/feature/media_discover/src/main/res/layout/fragment_discover.xml
+++ b/feature/media_discover/src/main/res/layout/fragment_discover.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:text="Discover"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="32dp"
+            android:textSize="@dimen/huge_text_size"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
             android:text="Search movies by title"
             android:textAllCaps="false"
             android:textColor="?attr/colorOnSecondary"
-            android:textSize="14sp"
+            android:textSize="@dimen/small_text_size"
             android:textStyle="bold"
             app:cornerRadius="@dimen/base_corner_radius"
             app:icon="@drawable/ic_search"
@@ -55,7 +55,7 @@
             android:text="Custom Filters"
             android:textAllCaps="false"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="14sp"
+            android:textSize="@dimen/small_text_size"
             android:textStyle="bold"
             app:cornerRadius="@dimen/base_corner_radius"
             app:icon="@drawable/ic_filters"
