--- a/feature/movie_details/src/main/res/layout/list_item_yt_video.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_yt_video.xml
@@ -18,6 +18,7 @@
         app:pv_chipValue="@{video.type}"
         app:pv_posterHeight="120dp"
         app:pv_posterWidth="220dp"
+        app:pv_title_style="@style/BodyTextViewStyle"
         app:pv_imageUrl="@{video.completeYoutubeVideoPath}"
         app:pv_title="@{video.name}" />
 </layout>
