--- a/core/ui/src/main/res/values/dimens.xml
+++ b/core/ui/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="default_chip_text_size">12sp</dimen>
     <dimen name="default_poster_height">150dp</dimen>
     <dimen name="default_poster_width">100dp</dimen>
+
+    <dimen name="huge_text_size">24sp</dimen>
+    <dimen name="medium_text_size">18sp</dimen>
+    <dimen name="small_text_size">16sp</dimen>
 </resources>
