--- a/feature/movie_details/src/main/res/layout/list_item_crew.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_crew.xml
@@ -22,18 +22,18 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/BodyTextViewStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{crew.name}"
-                android:textColor="?attr/colorOnPrimary"
                 android:textStyle="bold"
                 tools:text="@tools:sample/full_names" />
 
             <TextView
+                style="@style/BodyTextViewStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{crew.job}"
-                android:textColor="?attr/colorOnSecondary"
                 tools:text="@tools:sample/full_names" />
 
         </LinearLayout>
