--- a/feature/home/src/main/res/layout/list_item_section.xml
+++ b/feature/home/src/main/res/layout/list_item_section.xml
@@ -37,6 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clipToPadding="false"
+                    tools:listitem="@layout/list_item_media_small"
                     android:layout_marginTop="@dimen/base_margin"
                     android:orientation="horizontal"
                     android:paddingStart="@dimen/base_margin"
