--- a/core/ui/src/main/res/layout/fragment_listing_items.xml
+++ b/core/ui/src/main/res/layout/fragment_listing_items.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -16,16 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:emptyStateTitle="Look empty here!"
-            tools:listitem="@layout/list_item_media_small" />
-
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/progress_indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:progressTint="?attr/colorAccent"
-            app:indicatorColor="?attr/colorAccent" />
+            app:emptyStateTitle="Look empty here!" />
     </RelativeLayout>
 </layout>
