--- a/core/ui/src/main/res/layout/view_empty_state.xml
+++ b/core/ui/src/main/res/layout/view_empty_state.xml
@@ -7,45 +7,62 @@
         <!-- Variables here -->
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivEmptyStateImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            tools:src="@drawable/baseline_blind_24"
-            app:tint="?attr/colorOnSecondary" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvEmptyStateTitle"
-            style="@style/SmallTitleTextViewStyle"
+            <ImageView
+                android:id="@+id/ivEmptyStateImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:tint="?attr/colorOnSecondary"
+                tools:src="@drawable/baseline_blind_24" />
+
+            <TextView
+                android:id="@+id/tvEmptyStateTitle"
+                style="@style/SmallTitleTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:text="Empty Title"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tvEmptyStateSubtitle"
+                style="@style/BodyTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:text="Empty Subtitle"
+                tools:visibility="visible" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnEmptyState"
+                style="@style/PrimaryCustomMaterialButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:text="Empty Button"
+                tools:visibility="visible" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <ProgressBar
+            android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:text="Empty Title"
-            tools:visibility="visible" />
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:progressTint="?attr/colorAccent"
+            android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/tvEmptyStateSubtitle"
-            style="@style/BodyTextViewStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:text="Empty Subtitle"
-            tools:visibility="visible" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnEmptyState"
-            style="@style/PrimaryCustomMaterialButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:text="Empty Button"
-            tools:visibility="visible" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </RelativeLayout>
 </layout>
