refactor: Renamed the EmptyStateRecyclerView.

--- a/app/src/main/res/layout/fragment_discover_result.xml
+++ b/app/src/main/res/layout/fragment_discover_result.xml
@@ -29,7 +29,7 @@
                 app:titleTextColor="@color/alabaster" />
 
             <!-- Add your fragment's content here -->
-            <com.indisparte.ui.custom_view.EmptyStateRecyclerView
+            <com.indisparte.ui.custom_view.StatefulRecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
