--- a/app/src/main/res/layout/layout_recyclerview.xml
+++ b/app/src/main/res/layout/layout_recyclerview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<com.indisparte.ui.custom_view.EmptyStateRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.indisparte.ui.custom_view.StatefulRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recyclerView"
     android:layout_width="match_parent"
