--- a/core/ui/src/main/res/layout/fragment_listing_items.xml
+++ b/core/ui/src/main/res/layout/fragment_listing_items.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.indisparte.ui.custom_view.EmptyStateRecyclerView
+        <com.indisparte.ui.custom_view.StatefulRecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
