--- a/feature/movie_details/src/main/res/layout/fragment_collection_parts.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_collection_parts.xml
@@ -44,7 +44,7 @@
             tools:maxLines="3"
             tools:text="@tools:sample/lorem/random" />
 
-        <com.indisparte.ui.custom_view.EmptyStateRecyclerView
+        <com.indisparte.ui.custom_view.StatefulRecyclerView
             android:id="@+id/collection_parts"
             android:layout_width="match_parent"
             android:layout_height="0dp"
